# raycast-bedrock-scripts

./: .gitignore  README.md  ask-me-anything.sh  formal-text-with-bedrock.py  formal-text-with-bedrock.sh  generate-taiwan-meeting-summarize.sh  pyproject.toml  summarize-chinese-text-with-bedrock copy.py  summarize-chinese-text-with-bedrock.py  summarize-taiwanese-text-with-bedrock.sh  summarize-text-with-bedrock.py  summarize-text-with-bedrock.py.sh  toggle-default-browser.sh  toggle-default-browser.swift  translate-article-to-chinese.py  translate-article-to-english.py  translate-article-to-english.sh  translate-article-to-taiwannese.sh
.kiro/steering/: code-simplification.md  project-setup.md
source/: AnthropicBedrock.py  ask-me-anything.py  base_cli.py  config_manager.py  constants.py  formal-text-with-bedrock.py  generate-taiwan-meeting-summarize.py  summarize-taiwanese-text-with-bedrock.py  summarize-text-with-bedrock.py  test.py  test_cli.py  toggle-default-browser.swift  translate-article-to-english.py  translate-article-to-taiwannese.py
