[tool.pdm]

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "boto3==1.34.127",
    "botocore==1.34.127",
    "jmespath==1.0.1",
    "python-dateutil==2.9.0.post0",
    "s3transfer==0.10.1",
    "six==1.16.0",
    "urllib3==2.2.1",
    "argparse>=1.4.0",
    "anthropic[bedrock]>=0.32.0",
]
requires-python = ">=3.12"
